kubernetes/platform/data/druid/cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: druid
  labels:
    app.kubernetes.io/name: druid
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
