kubernetes/platform/data/druid/cluster/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: druid
  namespace: druid
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - druid.timourhomelab.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: druid-oauth2-proxy
          port: 4180
